--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ video {
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
-    background-color: #38bb73;
+    background-color: #6c6d9d;
     color: white;
     font-weight: bold;
 }
