--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@ main {
 /* the styles for the section */
 section {
 	width: 525px;
-	float: right;
+	float: left;
 	padding: 0 20px 20px 20px;
 }
 section h1 {
